--- a/apps/party-time-frontend/src/index.html
+++ b/apps/party-time-frontend/src/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body
-    class="bg-background-light dark:bg-background-dark text-on-background-light dark:text-on-background-dark"
+    class="bg-background-light text-on-background-light dark:bg-background-dark dark:text-on-background-dark"
   >
     <party-time-root></party-time-root>
   </body>
